--- a/src/client/src/assets/scss/components/App.scss
+++ b/src/client/src/assets/scss/components/App.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+:root{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+}
+
 body{
     margin: 0;
 }
@@ -11,8 +17,15 @@ body{
     }
 
     &__content{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        &__title{
+            font-size: 2rem;
+        }
         &__text{
-
+            font-size: 1rem;
         }
     }
 
