--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
     <head>
         <link href="{% static 'css/app/home.css' %}" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
         <script src="{% static 'js/main.bundle.js' %}"></script>
     </head>
 
     <body>
+        <side-bar></side-bar>
         {% block content %}
         {% endblock %}
     </body>
