giving up on scraping and just adding data myself from models

--- a/static/css/app/home.css
+++ b/static/css/app/home.css
@@ -10,10 +10,35 @@ body{
     color: var(--font-color);
     font-family: var(--font-family);
     display: flex;
+    font-weight: 500;
+}
+
+h1{
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 22px;
+}
+h2{
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 24px;
+}
+h3{
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+}
+p{
+    font-family: var(--font-family);
+    font-weight: 500;
+    line-height: 18px;
+    font-size: 16px;
 }
 
 .content--center{
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    padding: 30px 130px;
 }
