--- a/app/templates/plex.html
+++ b/app/templates/plex.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="content--center">
+        <plex-form></plex-form>
+    </div>
 {% endblock %}
