--- a/static/css/app/home.css
+++ b/static/css/app/home.css
@@ -9,6 +9,7 @@ body{
     background-color: var(--bg-color);
     color: var(--font-color);
     font-family: var(--font-family);
+    -webkit-font-smoothing: antialiased;
     display: flex;
     font-weight: 500;
 }
