Creating table and getting results rendered in it

--- a/app/templates/plex.html
+++ b/app/templates/plex.html
@@ -2,5 +2,6 @@
 {% block content %}
     <div class="content--center">
         <plex-form></plex-form>
+        <results-table></results-table>
     </div>
 {% endblock %}
