--- a/app/templates/plex.html
+++ b/app/templates/plex.html
@@ -3,5 +3,6 @@
     <div class="content--center">
         <plex-form></plex-form>
         <results-table></results-table>
+        <toast-card message="Hello there"></toast-card>
     </div>
 {% endblock %}
