--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content%}
-    <div class="content--center">
+    <div class="content--height-center">
+        <img src="{% static 'img/blm.png' %}">
     </div>
 {% endblock %}
