--- a/static/css/app/home.css
+++ b/static/css/app/home.css
@@ -37,8 +37,21 @@ p {
   font-size: 16px;
 }
 
+img {
+  margin: auto;
+  width: 100px;
+}
 .content--center {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 30px;
+}
+
+.content--height-center {
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
