--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,6 +3,8 @@
 
 {% block content%}
     <div class="content--height-center">
-        <img src="{% static 'img/blm.png' %}">
+        <a href="https://utaw.tech/about" target="_blank">
+            <img src="{% static 'img/blm.png' %}">
+        </a>
     </div>
 {% endblock %}
