--- a/app/templates/manage.html
+++ b/app/templates/manage.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content%}
-    <div class="content--height-center">
-        
+    <div class="content--center">
+        <manage-table></manage-table>
     </div>
 {% endblock %}
