--- a/static/css/app/home.css
+++ b/static/css/app/home.css
@@ -1,7 +1,7 @@
 :root {
-  --bg-color: black;
-  --font-color: white;
-  --hover-color: #fcba03;
+  --bg-color: white;
+  --font-color: black;
+  --hover-color: #ffa2a2;
   --font-family: "Kumbh Sans", sans-serif;
 }
 
@@ -45,7 +45,17 @@ a {
 img {
   margin: auto;
   width: 100px;
+  top: 0px;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  position: relative;
 }
+
+img:hover{ position: relative; 
+  top: -10px;} 
+
 .content--center {
   width: 100%;
   display: flex;
