many changes all around

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
 
     <body>
         <side-bar></side-bar>
+        <toast-card message="Hello there"></toast-card>
         {% block content %}
         {% endblock %}
     </body>
