--- a/app/templates/manage.html
+++ b/app/templates/manage.html
@@ -3,6 +3,6 @@
 
 {% block content%}
     <div class="content--center">
-        <manage-table></manage-table>
+        <progress-table></progress-table>
     </div>
 {% endblock %}
