--- a/app/templates/plex.html
+++ b/app/templates/plex.html
@@ -2,7 +2,6 @@
 {% block content %}
     <div class="content--center">
         <plex-form></plex-form>
-        <results-table></results-table>
-        <toast-card message="Hello there"></toast-card>
+        <add-table></add-table>
     </div>
 {% endblock %}
