--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" />
         <link href="{% static 'css/app/home.css' %}" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
         <script src="{% static 'js/main.bundle.js' %}"></script>
     </head>
 
