changing names and fixing desktop nav

--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="content--center">
-        <plex-form></plex-form>
+        <add-form></add-form>
         <add-table></add-table>
     </div>
 {% endblock %}
