--- a/app/static/css/app/main.css
+++ b/app/static/css/app/main.css
@@ -83,14 +83,64 @@ img:hover {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 50px;
+  padding: 0;
 }
 
 .content--height-center {
+  position: absolute;
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 50px;
+  margin: 0;
+  padding: 0;
+}
+
+.login-form__form {
+  display: flex;
+  flex-direction: column;
+  height: 250px;
+  width: 300px;
+  margin: auto;
+}
+
+.login-form__form [for="id_username"] {
+  overflow: hidden;
+  width: 74px;
+}
+
+.login-form__form [for="id_password"] {
+  overflow: hidden;
+  width: 71px;
+}
+
+.login-form__form input {
+  margin: 5px 0 10px 0;
+  font-size: 16px;
+  font-family: var(--font-family);
+  -webkit-font-smoothing: antialiased;
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 8px;
+  height: 35px;
+  padding: 0 10px;
+}
+
+.login-form__form input:hover:not(:focus) {
+  color: var(--hover-color);
+}
+
+.login-form__form input:focus {
+  border: 1px solid var(--hover-color);
+  outline: none;
+}
+
+.login-form__form [type="submit"] {
+  border: 0;
+}
+
+.login-form__form label {
+  text-transform: lowercase;
 }
