--- a/app/static/css/app/main.css
+++ b/app/static/css/app/main.css
@@ -23,11 +23,13 @@ body {
   color: var(--secondary-color);
   font-family: var(--font-family);
   -webkit-font-smoothing: antialiased;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-weight: 500;
   overflow: hidden;
   -webkit-transition: background-color 1000ms linear;
-  -ms-transition: background-color 1000ms linear;
+  -o-transition: background-color 1000ms linear;
   transition: background-color 1000ms linear;
 }
 
@@ -58,8 +60,12 @@ p {
 }
 
 a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 img {
@@ -67,7 +73,6 @@ img {
   width: 100px;
   top: 0px;
   -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   position: relative;
@@ -80,9 +85,16 @@ img:hover {
 
 .content--center {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 0;
 }
 
@@ -90,16 +102,28 @@ img:hover {
   position: absolute;
   width: 100%;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0;
   padding: 0;
 }
 
 .login-form__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 250px;
   width: 300px;
   margin: auto;
