--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
     <head>
-        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1">
         <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" />
         <link href="{% static 'css/app/main.css' %}" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
