--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" />
         <link href="{% static 'css/app/main.css' %}" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+        href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet"
+        />
         <script src="{% static 'js/main.bundle.js' %}"></script>
     </head>
 
