changing font back

--- a/app/static/css/app/main.css
+++ b/app/static/css/app/main.css
@@ -2,7 +2,7 @@
   --primary-color: white;
   --secondary-color: black;
   --hover-color: #ffa2a2;
-  --font-family: "Inconsolata", monospace;
+  --font-family: "Kumbh Sans", sans-serif;
 }
 
 ::-webkit-scrollbar {
